Fiksa myyyyye. Nå svarer den på oblig 2. Og fungerer

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,21 +5,21 @@
     <title>Title</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="kinoBillett.js"></script>
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
 </head>
 <body>
 <header></header>
 <main>
-    <h1>Bestilling av kinobilletter</h1>
 
-    <!---Benytter flex for å få  <p> og <select> etter hverandre.--->
-
-
-    <br>
-    <form id="kinoBillettForm">
+    <form id="kinoBillettForm" class="container">
+        <h1>Bestilling av kinobilletter</h1>
+        <br>
 
         <label for="inputValgtFilm">Velg film</label>
         <select id="inputValgtFilm">
+            <!---
             <option>Pippi Langstrømpe 2: Dommedagen</option>
             <option>Professor Cosmin og Cosmonautene</option>
             <option>Oslo-Bergen med Bergensbanen 6t</option>
@@ -27,27 +27,25 @@
             <option>Oslo-Bergen med den trans-Sibirske jernbane 238t</option>
             <option>Subway Surfers Doom Scrolling 8t</option>
             <option>Kristians 4-års bursdag (2002)</option>
+            -->
         </select>
-
-
-        <label for="inputAntall">Antall</label>
-        <input type="text" required id="inputAntall" style="width: 5%" pattern="^[[0-9]{1,3}"
-               title="Vennligst velg et gyldig antall billetter.">
 
 
         <!--- Input-felt for kontaktinfo legges inn i en tabell.-->
         <table>
             <tr>
-                <td></td>
+                <td><label for="inputAntall">Antall</label></td>
+                <td><input type="text" required id="inputAntall" style="width: 20%" pattern="^[0-9]{1,3}"
+                           title="Vennligst velg et gyldig antall billetter."></td>
             </tr>
             <tr>
                 <td><label for="inputFornavn">Fornavn</label></td>
-                <td><input type="text" required id="inputFornavn" pattern="[a-zæøåA-ZÆØÅ]"
+                <td><input type="text" required id="inputFornavn" pattern="[a-zæøåA-ZÆØÅ]{2,16}"
                            title="Vennligst skriv et gyldig navn."></td>></td>
             </tr>
             <tr>
                 <td><label for="inputEtternavn">Etternavn</label></td>
-                <td><input type="text" required id="inputEtternavn" pattern="[a-zæøåA-ZÆØÅ]"
+                <td><input type="text" required id="inputEtternavn" pattern="[a-zæøåA-ZÆØÅ]{2,16}"
                            title="Vennligst skriv et gyldig navn."></td>
             </tr>
             <tr>
@@ -62,23 +60,27 @@
                            title="Vennligst skriv en gyldig epost-adresse"></td>
             </tr>
         </table>
-        <button type="submit">Kjøp billett</button>
+        <button class="btn btn-primary" type="submit">Kjøp billett</button>
     </form>
 
     <br>
-    <br>
-    <h2>Alle billetter</h2>
-    <br>
 
-    <!-- Bestile billetter legges til inn i tabellen med JavaScript-kode -->
-    <table id="tableShowAlleFilmer">
+    <div class="container">
+        <h2>Alle billetter</h2>
 
-    </table>
+        <!-- Bestile billetter legges til inn i tabellen med JavaScript-kode -->
+        <table class="table table-striped table-bordered" id="tableShowAlleFilmer">
 
-    <br>
-    <button onclick="deleteAllBestillinger()">Slett alle billetter</button>
+        </table>
+
+        <br>
+        <button class="btn btn-danger" onclick="deleteAllBilletterOnServer()">
+            Slett alle billetter</button>
+    </div>
+
 </main>
 
 <footer></footer>
 </body>
+
 </html>
