Liten luring i html som skapte stygg page. Og fjerna utdatert kommentert js kode

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -41,7 +41,7 @@
             <tr>
                 <td><label for="inputFornavn">Fornavn</label></td>
                 <td><input type="text" required id="inputFornavn" pattern="[a-zæøåA-ZÆØÅ]{2,16}"
-                           title="Vennligst skriv et gyldig navn."></td>></td>
+                           title="Vennligst skriv et gyldig navn."></td></td>
             </tr>
             <tr>
                 <td><label for="inputEtternavn">Etternavn</label></td>
